# ant-neuro-rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: simulate.rs
scripts/: download-sdk.ps1  download-sdk.sh
src/: amplifier.rs  async_backend.rs  backend.rs  channel.rs  client.rs  error.rs  ffi.rs  ffi_backend.rs  lib.rs  main.rs  protocol.rs  recording.rs  sdk.rs  simulator.rs  stream.rs  types.rs  usb.rs
src/native/: backend.rs  backend_impl.rs  discovery.rs  mod.rs  ring_buffer.rs  ssp_parser.rs  state.rs  streaming.rs  usb_command.rs
